<resources>
    <string name="app_name">GameWatch</string>
    <string name="action_lets_go">Let\'s go</string>
    <string name="info_intro_1">Manage your games with ease and discover new games!</string>
    <string name="info_intro_2">Track game discounts across different game stores!</string>
    <string name="info_intro_3">Check to see if the games you cannot afford are cracked!</string>
    <string name="info_password">Password</string>
    <string name="info_email">Email</string>
    <string name="action_log_in">Log in</string>
    <string name="action_are_you_a_new_member">Are you a new member?</string>
    <string name="info_confirm_password">Confirm password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="info_game_item_rating">something</string>
    <string name="this_place_is_empty_ngo_discover_some_new_games">This place is empty!\nGo discover some new games!</string>
    <string name="title_game_details">Game details</string>
    <string name="msg_sales">Sales</string>
    <string name="msg_screenshots">Screenshots</string>
    <string name="msg_crack_status">Crack status</string>
    <string name="msg_similar_games">Similar games</string>
    <string name="msg_cracked">Cracked</string>
    <string name="msg_uncracked">Uncracked</string>
    <string name="msg_deals">Deals</string>
    <string name="msg_steam">Steam</string>
    <string name="placeholder_price">$59.99</string>
    <string name="placeholder_price_lower">$29.99</string>
    <string name="title_my_games">My Games</string>
    <string name="title_share">Share</string>
    <string name="msg_image">Image</string>
    <string name="msg_text">Text</string>
    <string name="action_edit">EDIT</string>
    <string name="action_settings">Settings</string>
    <string name="msg_edit_profile">Edit Profile</string>
    <string name="msg_source_code">Source Code</string>
    <string name="msg_upload">Upload</string>
    <string name="msg_profile">Profile</string>
    <string name="cover">Cover</string>
    <string name="msg_game_count_profile">%1d Games</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="msg_username">Username</string>
    <string name="msg_bio">Bio</string>
    <string name="msg_display_name">Display name</string>
    <string name="msg_profile_url">Profile URL</string>
    <string name="msg_epic_games">Epic Games</string>
    <string name="msg_uplay">Uplay</string>
    <string name="msg_discord">Discord</string>
    <string name="action_save">Save</string>
    <string name="msg_general_information">General information</string>
    <string name="msg_accounts">Accounts</string>
    <string name="msg_tag">Tag</string>
    <string name="msg_game_count_my_games">You\'ve added %1s games so far!</string>
    <string name="action_log_out">Log out</string>
    <string name="msg_log_out_dialog">You are logging out.\nAre you sure?</string>
    <string name="action_uppercase_yes">YES</string>
    <string name="action_uppercase_no">NO</string>
    <string name="msg_search_some_games">Search some games!</string>
    <string name="msg_discover_nothing_found">Oops! We couldn\'t find anything.</string>
    <string name="msg_not_available_yet">Not available yet... 🥺</string>
    <string name="action_view_game">View game</string>
    <string name="action_add_game">Add game</string>
    <string name="action_remove_game">Remove game</string>
    <string name="msg_no_connection">No connection</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_reset_password">Reset password</string>
    <string name="info_reset_password">Enter your account\'s email in order to receive\npassword reset instructions.</string>
</resources>