<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drawable_dropdown_textview_bg">

    <View
        android:id="@+id/viewHandle"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textViewShareLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ptsans_bold"
        android:text="@string/title_share"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewHandle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewContainerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/textViewLabelImage"
        app:layout_constraintEnd_toStartOf="@+id/cardViewContainerText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewShareLabel">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewLabelImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ptsans_regular"
        android:text="@string/msg_image"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/cardViewContainerImage"
        app:layout_constraintStart_toStartOf="@id/cardViewContainerImage"
        app:layout_constraintTop_toBottomOf="@id/cardViewContainerImage"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewContainerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/cardViewContainerImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardViewContainerImage"
        app:layout_constraintTop_toTopOf="@id/cardViewContainerImage">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_text" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textViewLabelImage"
        app:layout_constraintBottom_toBottomOf="@id/textViewLabelImage"
        app:layout_constraintStart_toStartOf="@id/cardViewContainerText"
        app:layout_constraintEnd_toEndOf="@id/cardViewContainerText"
        android:textSize="24sp"
        android:fontFamily="@font/ptsans_regular"
        android:text="@string/msg_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>