<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/buttonGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:elevation="1dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/appLogoContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:transitionName="appLogoContainer"
        app:cardCornerRadius="16dp"
        app:cardElevation="36dp"
        app:layout_constraintBottom_toTopOf="@id/textViewResetPasswordInfo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintWidth_percent="0.3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_foreground"
                app:layout_constraintDimensionRatio="1:1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewResetPasswordInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:elevation="1dp"
        android:fontFamily="@font/ptsans_regular"
        android:text="@string/info_reset_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:hint="@string/info_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_reset_password"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail" />

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/waveLoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:wlv_progressValue="20"
        app:wlv_shapeType="rectangle"
        app:wlv_triangle_direction="north"
        app:wlv_waveAmplitude="35"
        app:wlv_waveColor="@color/primaryDarkNight" />

    <FrameLayout
        android:id="@+id/overlayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackAlpha"
        android:elevation="48dp"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.WanderingCubes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="?attr/colorPrimary" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>